--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,4 +1,18 @@
-p {
+.odd {
     background-color: lightpink;
-    font-family: Verdana, DejaVu sans, sans-serif;
+    font-family: Verdana, "DejaVu sans", sans-serif;
+}
+
+#second-element{
+    color: blue;
+    font-size: 36px;
+}
+
+.adjust-font-size{
+    font-size: 24px;
+}
+
+#fourth-element{
+    background-color: green;
+    font-weight: bold;
 }
