--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -3,3 +3,8 @@
     font-family: Helvetica, 'Times New Roman', sans-serif;
     font-size: 28px
 }
+
+.click-button{
+    background-color: black;
+    color: white;
+}
