--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -6,10 +6,17 @@
 }
 
 .box {
+  
   background: palevioletred;
   font-weight: bold;
   text-align: center;
   border: 6px solid maroon;
   width: 80px;
   height: 80px;
+}
+
+.container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
