--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -47,9 +47,10 @@ ul {
   list-style-type: none;
 }
 
+
 .header{
+
   display: flex;
   justify-content: space-between;
-  padding: 8px;
+  gap: 16px;
 }
-
