Add padding to header and remove gap Add styling to ul

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -52,5 +52,12 @@ ul {
 
   display: flex;
   justify-content: space-between;
-  gap: 16px;
+  padding: 8px;
+  
+}
+ul{
+  display: flex;
+  margin: 0px;
+  padding: 0px;
+  align-items: center;
 }
