Add gap to ul and add same styling to left and right class

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -60,4 +60,11 @@ ul{
   margin: 0px;
   padding: 0px;
   align-items: center;
+  gap: 16px;
+}
+
+.left, .right{
+  display: flex;
+  gap: 16px;
+  justify-content: center;
 }
