--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -71,4 +71,13 @@ button.cancel {
 .modal{
   display: flex;
   padding: 32px;
+  gap: 16px;
+}
+
+.icon{
+  flex-shrink: 0;
+}
+
+.header{
+  display: flex;
 }
