--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -80,4 +80,8 @@ button.cancel {
 
 .header{
   display: flex;
+  justify-content: space-between;
+  font-size: 18px;
+  font-weight: 700;
+  align-items: center;
 }
