--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -70,7 +70,7 @@ button.cancel {
 
 .modal{
   display: flex;
-  padding: 32px;
+  padding: 16px;
   gap: 16px;
 }
 
@@ -84,4 +84,9 @@ button.cancel {
   font-size: 18px;
   font-weight: 700;
   align-items: center;
+  margin-bottom: 8px;
+}
+
+.text{
+  margin-bottom: 16px;
 }
